[gd_scene load_steps=5 format=3 uid="uid://bfox66lxeaeik"]

[ext_resource type="Script" path="res://policia.gd" id="1_gxdqu"]
[ext_resource type="Texture2D" uid="uid://ilrodbfscyui" path="res://assets/enemy.png" id="1_qr42n"]
[ext_resource type="AudioStream" uid="uid://b1q3ht2jq1o8l" path="res://audios/9mm-pistol-shot-6349.mp3" id="3_unywe"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ojw06"]
radius = 17.2627

[node name="Policia" type="CharacterBody2D"]
script = ExtResource("1_gxdqu")

[node name="Enemy" type="Sprite2D" parent="."]
texture = ExtResource("1_qr42n")

[node name="InitOfGun" type="Marker2D" parent="."]
position = Vector2(15, 23)

[node name="EndOfGun" type="Marker2D" parent="."]
position = Vector2(15, 39)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, -1)
shape = SubResource("CircleShape2D_ojw06")

[node name="ShootTimer" type="Timer" parent="."]
autostart = true

[node name="AudioDisparo" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_unywe")
volume_db = -14.237

[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
